--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-<p>hi</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Mike Kopchick - Web Architect and Engineer</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="assets/site.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  </head>
+  <body>
+    <div class="background">
+      <img src="assets/me.jpeg" />
+    </div>
+    <div class="header">
+      <p class="name">Mike Kopchick</p>
+      <p class="email"><a href="mailto:kopchickm@gmail.com">kopchickm@gmail.com</a></p>
+      <h1 class="tag">Building and maintaining solid Ruby on Rails applications</h1>
+    </div>
+  </body>
+</html>
