--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Mike Kopchick - Web Architect and Engineer</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Roboto:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/site.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
@@ -14,6 +14,32 @@
       <p class="name">Mike Kopchick</p>
       <p class="email"><a href="mailto:kopchickm@gmail.com">kopchickm@gmail.com</a></p>
       <h1 class="tag">Building and maintaining solid Ruby on Rails applications</h1>
+    </div>
+
+    <div class="arrow">
+      <img src="assets/arrow.png" />
+    </div>
+
+    <div class="client fhc">
+      <div class="blurb">
+        <h2>Florida Homestead</h2>
+        <p>Homestead tax assessments for Florida residents</p>
+        <p><a href="#">More</a></p>
+      </div>
+      <div class="image">
+        <img src="assets/fhc_homepage.png" />
+      </div>
+    </div>
+
+    <div class="client mfd">
+      <div class="blurb">
+        <h2>MFD Home Certs</h2>
+        <p>Online home inspection services for manufactured home inspectors</p>
+        <p><a href="#">More</a></p>
+      </div>
+      <div class="image">
+        <img src="assets/mfd_homepage.png" />
+      </div>
     </div>
   </body>
 </html>
