Add better picture

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="background">
-      <img src="assets/me.jpeg" />
+      <img src="assets/me.jpg" />
     </div>
     <div class="header">
       <p class="name">Mike Kopchick</p>
@@ -17,12 +17,13 @@
     </div>
 
     <div class="arrow">
-      <img src="assets/arrow.png" />
+      <a href="#clients"><img src="assets/arrow.png" /></a>
     </div>
 
     <div class="client fhc">
+      <a name="clients"></a>
       <div class="blurb">
-        <h2>Florida Homestead</h2>
+        <h2><a name="clients">Florida Homestead</a></h2>
         <p>Homestead tax assessments for Florida residents</p>
         <p><a href="#">More</a></p>
       </div>
