--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="background">
-      <img src="assets/me.jpg" />
+      <img src="assets/me.png" />
     </div>
     <div class="header">
       <p class="name">Mike Kopchick</p>
