Open email link in new tab

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </div>
     <div class="header">
       <p class="name">Mike Kopchick</p>
-      <p class="email"><a href="mailto:kopchickm@gmail.com">kopchickm@gmail.com</a></p>
+      <p class="email"><a href="mailto:kopchickm@gmail.com" target="_blank">kopchickm@gmail.com</a></p>
       <h1 class="tag">Building and maintaining solid Ruby on Rails applications</h1>
     </div>
 
