--- a/index.html
+++ b/index.html
@@ -42,5 +42,63 @@
         <img src="assets/mfd_homepage.png" />
       </div>
     </div>
+
+    <div class="experience">
+      <h2>Experience</h2>
+      <div class="gig">
+        <div class="location">
+          <p class="company-name"><a href="https://recursive.us" target="_blank">Recursive.us</a></p>
+          <p>Partner / Member</p>
+        </div>
+        <div class="duration">
+          <p>2018 - Present</p>
+          <p>Grand Rapids, MI</p>
+        </div>
+      </div>
+
+      <div class="gig">
+        <div class="location">
+          <p class="company-name"><a href="https://collectiveidea.com" target="_blank">Collective Idea</a></p>
+          <p>Senior Software Engineer</p>
+        </div>
+        <div class="duration">
+          <p>2015 - 2018</p>
+          <p>Holland, MI</p>
+        </div>
+      </div>
+
+      <div class="gig">
+        <div class="location">
+          <p class="company-name">Solid Web Development</p>
+          <p>Owner / Senior Software Engineer</p>
+        </div>
+        <div class="duration">
+          <p>2011 - Present</p>
+          <p>Grand Rapids, MI</p>
+        </div>
+      </div>
+
+      <div class="gig">
+        <div class="location">
+          <p class="company-name"><a href="https://carnevale.co" target="_blank">Carnevale</a></p>
+          <p>Senior Software Engineer</p>
+        </div>
+        <div class="duration">
+          <p>2009 - 2011</p>
+          <p>Grand Rapids, MI</p>
+        </div>
+      </div>
+
+      <div class="gig">
+        <div class="location">
+          <p class="company-name">Self-employed</p>
+          <p>Software / Web Engineer</p>
+        </div>
+        <div class="duration">
+          <p>2005 - 2009</p>
+          <p>Grand Rapids, MI</p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
