Build out MFD and finish initial site

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <title>Mike Kopchick - Web Architect and Engineer</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Roboto:400,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/site.css">
+    <link rel="stylesheet" href="assets/defaults.css">
+    <link rel="stylesheet" href="assets/homepage.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
@@ -15,17 +16,19 @@
       <p class="email"><a href="mailto:kopchickm@gmail.com" target="_blank">kopchickm@gmail.com</a></p>
       <h1 class="tag">Building and maintaining solid Ruby on Rails applications</h1>
     </div>
+    <p class="subtag">Hi! I've been building, deploying, and maintaining custom Rails apps for years. Below are are a couple recent success stories. If you have an idea for a new online service or have an existing web app that needs a maintainer, send me an email! Thanks.</p>
 
     <div class="arrow">
       <a href="#clients"><img src="assets/arrow.png" /></a>
     </div>
 
+    <h1>Recent Work</h1>
     <div class="client fhc">
       <a name="clients"></a>
       <div class="blurb">
         <h2><a name="clients">Florida Homestead</a></h2>
         <p>Homestead tax assessments for Florida residents</p>
-        <p><a href="#">More</a></p>
+        <p><a href="fhc.html">More</a></p>
       </div>
       <div class="image">
         <img src="assets/fhc_homepage.png" />
@@ -36,7 +39,7 @@
       <div class="blurb">
         <h2>MFD Home Certs</h2>
         <p>Online home inspection services for manufactured home inspectors</p>
-        <p><a href="#">More</a></p>
+        <p><a href="mfd.html">More</a></p>
       </div>
       <div class="image">
         <img src="assets/mfd_homepage.png" />
