Clean up padding and margins

--- a/index.html
+++ b/index.html
@@ -8,23 +8,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-    <div class="background">
-      <img src="assets/me.png" />
-    </div>
-    <div class="header">
-      <p class="name">Mike Kopchick</p>
-      <p class="email"><a href="mailto:kopchickm@gmail.com" target="_blank">kopchickm@gmail.com</a></p>
-      <h1 class="tag">Building and maintaining solid Ruby on Rails applications</h1>
-    </div>
-    <p class="subtag">Hi! I've been building, deploying, and maintaining custom Rails apps for years. Below are are a couple recent success stories. If you have an idea for a new online service or have an existing web app that needs a maintainer, send me an email! Thanks.</p>
+    <div class="top">
+      <div class="background">
+        <img src="assets/me.png" />
+      </div>
+      <div class="header">
+        <p class="name">Mike Kopchick</p>
+        <p class="email"><a href="mailto:kopchickm@gmail.com" target="_blank">kopchickm@gmail.com</a></p>
+        <h1 class="tag">Building and maintaining solid Ruby on Rails applications</h1>
+      </div>
+      <p class="subtag">Hi! I've been building, deploying, and maintaining custom Rails apps for years. Below are are a couple recent success stories. If you have an idea for a new online service or have an existing web app that needs a maintainer, send me an email! Thanks.</p>
 
-    <div class="arrow">
-      <a href="#clients"><img src="assets/arrow.png" /></a>
+      <div class="arrow">
+        <a href="#clients"><img src="assets/arrow.png" /></a>
+      </div>
     </div>
 
-    <h1>Recent Work</h1>
+    <h1 class="recent-work"><a name="clients">Recent Work</a></h1>
     <div class="client fhc">
-      <a name="clients"></a>
       <div class="blurb">
         <h2><a name="clients">Florida Homestead</a></h2>
         <p>Homestead tax assessments for Florida residents</p>
