--- a/fhc.html
+++ b/fhc.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Mike Kopchick - Web Engineer</title>
+  <link rel="icon" href="/favicon.png" type="image/png">
   <link href="https://fonts.googleapis.com/css?family=Montserrat|Roboto:400,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/defaults.css">
   <link rel="stylesheet" href="assets/portfolio.css">
