Add social media

--- a/index.html
+++ b/index.html
@@ -104,6 +104,18 @@
           <p>Grand Rapids, MI</p>
         </div>
       </div>
+      <div class="contact">
+        <div>
+          <a href="https://www.linkedin.com/in/kopchickm/" target="_blank">
+            <img src="assets/LI-In-Bug.png" />
+          </a>
+        </div>
+        <div>
+          <a href="mailto:kopchickm@gmail.com" target="_blank">
+            <img src="assets/email.png" />
+          </a>
+        </div>
+      </div>
     </div>
   </body>
 </html>
