--- a/mfd.html
+++ b/mfd.html
@@ -41,6 +41,17 @@
       </div>
     </div>
   </div>
-</div>
+  <div class="contact">
+    <div>
+      <a href="https://www.linkedin.com/in/kopchickm/" target="_blank">
+        <img src="assets/LI-In-Bug.png" />
+      </a>
+    </div>
+    <div>
+      <a href="mailto:kopchickm@gmail.com" target="_blank">
+        <img src="assets/email.png" />
+      </a>
+    </div>
+  </div>
 </body>
 </html>
