--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </div>
     </div>
 
-    <h1 class="recent-work"><a name="clients">Recent Work</a></h1>
+    <h1><a name="clients">Recent Work</a></h1>
     <div class="client fhc">
       <div class="blurb">
         <h2><a name="clients">Florida Homestead</a></h2>
