Add Recursive and Flexco

--- a/flexco.html
+++ b/flexco.html
@@ -18,8 +18,8 @@
       <div class="collapsed-nav"><a href="#" id="navigation-toggle">Projects</a></div>
       <nav id="nav-menu">
         <a href="recursive.html">Recursive</a>
-        <a href="fhc.html" class="selected">Florida Homestead</a>
-        <a href="flexco.html">Flexco</a>
+        <a href="fhc.html">Florida Homestead</a>
+        <a href="flexco.html" class="selected">Flexco</a>
         <a href="mfd.html">MFD Home Certs</a>
       </nav>
     </div>
@@ -28,18 +28,17 @@
   <div class="portfolio">
     <div class="role">
       <p class="role-key">Business Type</p>
-      <p class="role-value">Startup</p>
+      <p class="role-value">Corporation</p>
       <p class="role-key">Role</p>
-      <p class="role-value">Full-stack engineer<br/>Ongoing support</p>
+      <p class="role-value">Android / iOS development</p>
     </div>
     <div class="info">
-      <h1>Florida Homestead</h1>
-      <p>Working with <a href="https://recursive.us" target="_blank">Recursive</a>, I led discovery and development on a brand-new Rails app for <a href="https://floridahomesteadcheck.com" target="_blank">Florida Homestead</a>. Their vision - save people money on property taxes by finding tax exemptions that they aren't currently receiving.</p>
-      <p>We built and delivered a Rails app that lets customers complete a questionairre and then uses that data to look up their current tax status. Connecting with Florida's Dept. of Revenue data and using a complex series of logic trees, we compile a list of potential tax savings. Finally, we wrap it all into a PDF with instructions on how to apply for any tax exemptions we found.</p>
-      <div class="images">
-        <img src="assets/fhc1.png" />
-        <img src="assets/fhc2.png" />
-        <img src="assets/fhc3.png" />
+      <h1>Flexco</h1>
+      <p>Working with <a href="https://spindance.com">Spindance</a>, I led Android and iOS development for <a href="https://www.flexco.com/NA/EN/Flexco.htm">Flexco's</a> Aeropress firmware management app. Flexco builds presses that connect via bluetooth or WiFi to a mobile app. From there, the mobile app can update the press' firmware, download and store logs, and sync data.</p>
+      <div class="images vertical no-shadow">
+        <img src="assets/flexco1.webp" />
+        <img src="assets/flexco2.webp" />
+        <img src="assets/flexco3.webp" />
       </div>
     </div>
   </div>
