--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
       <div class="header">
         <p class="name">Mike Kopchick</p>
         <p class="email"><a href="mailto:kopchickm@gmail.com" target="_blank">kopchickm@gmail.com</a></p>
-        <h1 class="tag">Building and maintaining solid Ruby on Rails applications</h1>
+        <h1 class="tag">Full-stack Ruby on Rails and Android Engineering</h1>
       </div>
-      <p class="subtag">Hi! I've been building, deploying, and maintaining custom Rails apps for years. Below are are a couple recent success stories. If you have an idea for a new online service or have an existing web app that needs a maintainer, send me an email! Thanks.</p>
+      <p class="subtag">Hi! I've been building, deploying, and maintaining custom Rails apps, as well as Android development. Below are are a couple recent success stories. If you have an idea for a new online service or have an existing web app that needs a maintainer, send me an email!</p>
 
       <div class="arrow">
         <a href="#clients"><img src="assets/arrow.png" /></a>
@@ -26,11 +26,23 @@
     </div>
 
     <h1><a name="clients">Recent Work</a></h1>
+
     <div class="client fhc">
       <div class="blurb">
         <h2><a name="clients">Florida Homestead</a></h2>
         <p>Homestead tax assessments for Florida residents</p>
         <p><a href="fhc.html">More</a></p>
+      </div>
+      <div class="image">
+        <img src="assets/fhc_homepage.png" />
+      </div>
+    </div>
+
+    <div class="client flexco">
+      <div class="blurb">
+        <h2><a name="clients">Flexco</a></h2>
+        <p>Android / iOS Aeropress maintenance app</p>
+        <p><a href="flexco.html">More</a></p>
       </div>
       <div class="image">
         <img src="assets/fhc_homepage.png" />
@@ -45,6 +57,17 @@
       </div>
       <div class="image">
         <img src="assets/mfd_homepage.png" />
+      </div>
+    </div>
+
+    <div class="client recursive">
+      <div class="blurb">
+        <h2><a name="clients">Recursive</a></h2>
+        <p>The independence of freelance without all the hassle</p>
+        <p><a href="recursive.html">More</a></p>
+      </div>
+      <div class="image">
+        <img src="assets/recursive_homepage.png" />
       </div>
     </div>
 
