--- a/mfd.html
+++ b/mfd.html
@@ -17,7 +17,9 @@
     <div class="nav">
       <div class="collapsed-nav"><a href="#" id="navigation-toggle">Projects</a></div>
       <nav id="nav-menu">
+        <a href="recursive.html">Recursive</a>
         <a href="fhc.html">Florida Homestead</a>
+        <a href="flexco.html">Flexco</a>
         <a href="mfd.html" class="selected">MFD Home Certs</a>
       </nav>
     </div>
