--- a/recursive.html
+++ b/recursive.html
@@ -18,9 +18,9 @@
       <div class="collapsed-nav"><a href="#" id="navigation-toggle">Projects</a></div>
       <nav id="nav-menu">
         <a href="recursive.html">Recursive</a>
-        <a href="fhc.html" class="selected">Florida Homestead</a>
+        <a href="fhc.html">Florida Homestead</a>
         <a href="flexco.html">Flexco</a>
-        <a href="mfd.html">MFD Home Certs</a>
+        <a href="mfd.html" class="selected">MFD Home Certs</a>
       </nav>
     </div>
   </div>
@@ -30,16 +30,21 @@
       <p class="role-key">Business Type</p>
       <p class="role-value">Startup</p>
       <p class="role-key">Role</p>
-      <p class="role-value">Full-stack engineer<br/>Ongoing support</p>
+      <p class="role-value">Co-Owner, Member</p>
     </div>
     <div class="info">
-      <h1>Florida Homestead</h1>
-      <p>Working with <a href="https://recursive.us" target="_blank">Recursive</a>, I led discovery and development on a brand-new Rails app for <a href="https://floridahomesteadcheck.com" target="_blank">Florida Homestead</a>. Their vision - save people money on property taxes by finding tax exemptions that they aren't currently receiving.</p>
-      <p>We built and delivered a Rails app that lets customers complete a questionairre and then uses that data to look up their current tax status. Connecting with Florida's Dept. of Revenue data and using a complex series of logic trees, we compile a list of potential tax savings. Finally, we wrap it all into a PDF with instructions on how to apply for any tax exemptions we found.</p>
+      <h1>Recursive</h1>
+      <p>Recursive is a guild for freelance engineers and designers. We simplify freelancing by handling business and administration, so you can focus on your work. Our benefits include:</p>
+      <ul>
+        <li>Payroll and tax management</li>
+        <li>Group health insurance</li>
+        <li>Contract opportunities</li>
+        <li>A network of freelancers to draw on</li>
+      </ul>
+      <p>Going solo doesn't have to mean being alone.</p>
       <div class="images">
-        <img src="assets/fhc1.png" />
-        <img src="assets/fhc2.png" />
-        <img src="assets/fhc3.png" />
+        <img src="assets/recursive_homepage.png" />
+        <img src="assets/recursive2.png" />
       </div>
     </div>
   </div>
