Fixup vertical images

--- a/flexco.html
+++ b/flexco.html
@@ -35,10 +35,10 @@
     <div class="info">
       <h1>Flexco</h1>
       <p>Working with <a href="https://spindance.com">Spindance</a>, I led Android and iOS development for <a href="https://www.flexco.com/NA/EN/Flexco.htm">Flexco's</a> Aeropress firmware management app. Flexco builds presses that connect via bluetooth or WiFi to a mobile app. From there, the mobile app can update the press' firmware, download and store logs, and sync data.</p>
-      <div class="images vertical no-shadow">
-        <img src="assets/flexco1.webp" />
-        <img src="assets/flexco2.webp" />
-        <img src="assets/flexco3.webp" />
+      <div class="images vertical">
+        <img src="assets/flexco1.webp" class="add-shadow" />
+        <img src="assets/flexco2.webp" class="add-shadow" />
+        <img src="assets/flexco3.webp" class="add-shadow" />
       </div>
     </div>
   </div>
