--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <p><a href="fhc.html">More</a></p>
       </div>
       <div class="image">
-        <img src="assets/fhc_homepage.png" />
+        <img src="assets/fhc_homepage.png"/>
       </div>
     </div>
 
@@ -44,8 +44,9 @@
         <p>Android / iOS Aeropress maintenance app</p>
         <p><a href="flexco.html">More</a></p>
       </div>
-      <div class="image">
-        <img src="assets/fhc_homepage.png" />
+      <div class="image vertical tiled">
+        <img src="assets/flexco1.webp" class="add-shadow" />
+        <img src="assets/flexco2.webp" class="add-shadow" />
       </div>
     </div>
 
