Add backgrounds to android images

--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
         <p><a href="flexco.html">More</a></p>
       </div>
       <div class="image vertical tiled">
-        <img src="assets/flexco1.webp" class="add-shadow" />
-        <img src="assets/flexco2.webp" class="add-shadow" />
+        <img src="assets/flexco1-bg.png" />
       </div>
     </div>
 
