Clean up language

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <p class="email"><a href="mailto:kopchickm@gmail.com" target="_blank">kopchickm@gmail.com</a></p>
         <h1 class="tag">Full-stack Ruby on Rails and Android Engineering</h1>
       </div>
-      <p class="subtag">Hi! I've been building, deploying, and maintaining custom Rails apps, as well as Android development. Below are are a couple recent success stories. If you have an idea for a new online service or have an existing web app that needs a maintainer, send me an email!</p>
+      <p class="subtag">Hi! I build and maintain Rails and Android apps. Below are are some recent success stories. If you have an idea for a new online service or have an existing web app that needs a maintainer, send me an email!</p>
 
       <div class="arrow">
         <a href="#clients"><img src="assets/arrow.png" /></a>
