Add link for Recursive.us

--- a/recursive.html
+++ b/recursive.html
@@ -17,10 +17,10 @@
     <div class="nav">
       <div class="collapsed-nav"><a href="#" id="navigation-toggle">Projects</a></div>
       <nav id="nav-menu">
-        <a href="recursive.html">Recursive</a>
+        <a href="recursive.html" class="selected">Recursive</a>
         <a href="fhc.html">Florida Homestead</a>
         <a href="flexco.html">Flexco</a>
-        <a href="mfd.html" class="selected">MFD Home Certs</a>
+        <a href="mfd.html">MFD Home Certs</a>
       </nav>
     </div>
   </div>
@@ -31,10 +31,12 @@
       <p class="role-value">Startup</p>
       <p class="role-key">Role</p>
       <p class="role-value">Co-Owner, Member</p>
+      <p class="role-key">Website</p>
+      <p class="role-value"><a href="https://recursive.us" target="_blank">recursive.us</a></p>
     </div>
     <div class="info">
       <h1>Recursive</h1>
-      <p>Recursive is a guild for freelance engineers and designers. We simplify freelancing by handling business and administration, so you can focus on your work. Our benefits include:</p>
+      <p><a href="https://recursive.us" target="_blank">Recursive</a> is a guild for freelance engineers and designers. We simplify freelancing by handling business and administration, so you can focus on your work. Our benefits include:</p>
       <ul>
         <li>Payroll and tax management</li>
         <li>Group health insurance</li>
